[package]
name = "wavelet"
version = "0.6.0"
edition = "2024"
description = "High-performance graph-based stream processing runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Abso1ut3Zer0/wavelet-rs"
rust-version = "1.89.0"
readme = "README.md"
categories = [
    "asynchronous",
    "concurrency",
    "data-structures",
    "algorithms",
    "simulation"
]
exclude = [
    ".github/",
    ".idea/",
    ".editorconfig",
    ".gitignore",
    "wavelet.png",
    "CONTRIBUTING.md",
]

[dependencies]
ahash = "0.8.12"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
derive_builder = "0.20.2"
enum-as-inner = "0.6.1"
mio = { version = "1.1.0", features = ["os-poll", "net"] }
petgraph = "0.8.3"
signal-hook = { version = "0.3.18", optional = true }
slab = "0.4.11"
thiserror = "2.0.17"
time = "0.3.44"

[features]
default = ["runtime"]
runtime = []
factories = ["runtime"]
testing = ["runtime"]
channel = ["runtime"]
wsnl = ["runtime"]
signals = ["runtime", "signal-hook"]
unstable = ["runtime"]
full = ["runtime", "factories", "testing", "channel", "wsnl", "signals"]

[package.metadata.docs.rs]
all-features = true
